--- a/tests/WE2E/test_configs/verification/config.MET_ensemble_verification_only_vx.yaml
+++ b/tests/WE2E/test_configs/verification/config.MET_ensemble_verification_only_vx.yaml
@@ -17,10 +17,10 @@ workflow:
   DATE_LAST_CYCL: '2019061500'
   FCST_LEN_HRS: 6
   PREEXISTING_DIR_METHOD: rename
-
-rocoto:
-  tasks:
-    taskgroups: '{{ ["parm/wflow/verify_pre.yaml", "parm/wflow/verify_det.yaml", "parm/wflow/verify_ens.yaml"]|include }}'
+  taskgroups:
+    - parm/wflow/verify_pre.yaml
+    - parm/wflow/verify_det.yaml
+    - parm/wflow/verify_ens.yaml
 
 global:
   DO_ENSEMBLE: true
