--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1512,10 +1512,8 @@ task_make_sfc_climo:
 # EXTRN ICS config parameters
 #-----------------------------
 task_get_extrn_ics:
-  execution:
-    cores: 1
-    nodes: 1
-    walltime: "01:30:00"
+  tasks_per_node: 1
+  walltime: "01:30:00"
   #
   #-----------------------------------------------------------------------
   #
@@ -1610,10 +1608,8 @@ task_get_extrn_ics:
 # EXTRN LBCS config parameters
 #-----------------------------
 task_get_extrn_lbcs:
-  execution:
-    cores: 1
-    nodes: 1
-    walltime: "01:30:00"
+  tasks_per_node: 1
+  walltime: "01:30:00"
   #
   #-----------------------------------------------------------------------
   #
@@ -1693,11 +1689,12 @@ task_get_extrn_lbcs:
 task_make_ics:
 
   chgres_cube:
-    execution:
+    execution: &chgres_cube_execution
       batchargs:
         walltime: 00:30:00
         threads: 1
-        cores: 1
+        nodes: 4
+        tasks_per_node: 12
   #-----------------------------------------------------------------------
   # KMP_AFFINITY_MAKE_ICS: 
   # Intel Thread Affinity Interface for the make_ics task. 
@@ -1756,10 +1753,7 @@ task_make_ics:
 task_make_lbcs:
   chgres_cube:
     execution:
-      batchargs:
-        walltime: 00:30:00
-        threads: 1
-        cores: 1
+      <<: *chgres_cube_execution
   #------------------------------------------------------------------------
   #
   # KMP_AFFINITY_MAKE_LBCS: 
@@ -1787,8 +1781,7 @@ task_make_lbcs:
 task_run_fcst:
   # UW Placeholder additions
   rundir: '{{ workflow.EXPTDIR }}/{{ timevars.yyyymmddhh }}{{ "/mem%s" % ("MEMBER"|env) if global.DO_ENSEMBLE }}'
-  execution:
-    walltime: 04:30:00
+  walltime: 04:30:00
   #------------------------------------------------------------------------
   #
   # NNODES_RUN_FCST: 
