--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -2461,7 +2461,7 @@ global:
 #----------------------------
 # verification (vx) parameters
 #-----------------------------
-verification:
+verification_resources:
   execution:
     cores: 1
     deterministic:
@@ -2498,6 +2498,7 @@ verification:
     check_post_output:
       walltime: 00:30:00
 
+verification:
   #
   # METPLUS_VERBOSITY_LEVEL: 
   # Logging verbosity level used by METplus verification tools.  0 to 5,
