--- a/parm/wflow/coldstart.yaml
+++ b/parm/wflow/coldstart.yaml
@@ -32,16 +32,16 @@ task_get_extrn_ics:
   envars:
     <<: *default_vars
     ICS_OR_LBCS: ICS
-    nprocs: !int '{{ task_get_extrn_ics.tasks_per_node }}'
+    nprocs: !int '{{ task_get_extrn_ics.execution.tasks_per_node }}'
   join:
     cyclestr:
       value: '&LOGDIR;/{{ jobname }}_@Y@m@d@H&LOGEXT;'
   memory: 4G
   native: '{{ platform.SCHED_NATIVE_CMD_HPSS if platform.get("SCHED_NATIVE_CMD_HPSS") else platform.SCHED_NATIVE_CMD}}'
   partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "None" }}'
-  cores: !int '{{ task_get_extrn_ics.tasks_per_node }}'
+  cores: !int '{{ task_get_extrn_ics.execution.tasks_per_node }}'
   queue: '&QUEUE_HPSS;'
-  walltime: '{{ task_get_extrn_ics.walltime }}'
+  walltime: '{{ task_get_extrn_ics.execution.walltime }}'
   dependency:
     or:
       and:
@@ -69,16 +69,16 @@ task_get_extrn_lbcs:
   envars:
     <<: *default_vars
     ICS_OR_LBCS: LBCS
-    nprocs: !int '{{ task_get_extrn_lbcs.tasks_per_node }}'
+    nprocs: !int '{{ task_get_extrn_lbcs.execution.tasks_per_node }}'
   join:
     cyclestr:
       value: '&LOGDIR;/{{ jobname }}_@Y@m@d@H&LOGEXT;'
   memory: 4G
-  cores: !int '{{ task_get_extrn_lbcs.tasks_per_node }}'
+  cores: !int '{{ task_get_extrn_lbcs.execution.tasks_per_node }}'
   native: '{{ platform.SCHED_NATIVE_CMD_HPSS if platform.get("SCHED_NATIVE_CMD_HPSS") else platform.SCHED_NATIVE_CMD }}'
   partition: '{{ "&PARTITION_HPSS;" if platform.get("PARTITION_HPSS") else "None" }}'
   queue: '&QUEUE_HPSS;'
-  walltime: '{{ task_get_extrn_lbcs.walltime }}'
+  walltime: '{{ task_get_extrn_lbcs.execution.walltime }}'
   dependency:
     or:
       and:
