--- a/parm/wflow/verify_ens.yaml
+++ b/parm/wflow/verify_ens.yaml
@@ -157,7 +157,7 @@ metatask_GenEnsProd_EnsembleStat_NDAS:
       ACCUM_HH: '01'
       FCST_LEVEL: 'all'
       FCST_THRESH: 'all'
-    walltime: "{{ verification_resources.execution.ensemble.ndas.walltime }}"
+    walltime: "{{ verification_resources.execution.ensemble.genensprod.ndas.walltime }}"
     dependency:
       and:
         # The Pb2nc task (which is run only for obs) must be complete because
