--- a/tests/WE2E/test_configs/aqm/config.aqm_grid_AQM_NA13km_suite_GFS_v16.yaml
+++ b/tests/WE2E/test_configs/aqm/config.aqm_grid_AQM_NA13km_suite_GFS_v16.yaml
@@ -21,24 +21,21 @@ workflow:
     - parm/wflow/test.yaml
 nco:
   NET_default: aqm
-rocoto:
-  tasks:
-    task_aqm_ics_ext:
-    metatask_run_ensemble:
-      task_run_fcst_mem#mem#:
-        walltime: 01:20:00
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: FV3GFS
-  FV3GFS_FILE_FMT_ICS: netcdf
-  EXTRN_MDL_ICS_OFFSET_HRS: 0
-  USE_USER_STAGED_EXTRN_FILES: true
+  envars:
+    EXTRN_MDL_NAME_ICS: FV3GFS
+    FV3GFS_FILE_FMT_ICS: netcdf
+    EXTRN_MDL_ICS_OFFSET_HRS: 0
+    USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: 6
-  FV3GFS_FILE_FMT_LBCS: netcdf
-  EXTRN_MDL_LBCS_OFFSET_HRS: 0
-  USE_USER_STAGED_EXTRN_FILES: true    
+  envars:
+    EXTRN_MDL_NAME_LBCS: FV3GFS
+    LBC_SPEC_INTVL_HRS: 6
+    FV3GFS_FILE_FMT_LBCS: netcdf
+    EXTRN_MDL_LBCS_OFFSET_HRS: 0
+    USE_USER_STAGED_EXTRN_FILES: true    
 task_run_fcst:
+  walltime: 01:20:00
   DT_ATMOS: 180
   LAYOUT_X: 50
   LAYOUT_Y: 34
