--- a/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_NewZealand_3km.yaml
+++ b/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_NewZealand_3km.yaml
@@ -22,14 +22,16 @@ task_make_grid:
   ESGgrid_WIDE_HALO_WIDTH: 6
   ESGgrid_PAZI: 0.0
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: FV3GFS
-  FV3GFS_FILE_FMT_ICS: grib2
-  USE_USER_STAGED_EXTRN_FILES: true
+  envars:
+    EXTRN_MDL_NAME_ICS: FV3GFS
+    FV3GFS_FILE_FMT_ICS: grib2
+    USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: FV3GFS
-  FV3GFS_FILE_FMT_LBCS: grib2
-  LBC_SPEC_INTVL_HRS: 6
-  USE_USER_STAGED_EXTRN_FILES: true
+  envars:
+    EXTRN_MDL_NAME_LBCS: FV3GFS
+    FV3GFS_FILE_FMT_LBCS: grib2
+    LBC_SPEC_INTVL_HRS: 6
+    USE_USER_STAGED_EXTRN_FILES: true
 task_run_fcst:
   DT_ATMOS: 40
   LAYOUT_X: 16
@@ -49,10 +51,6 @@ task_run_fcst:
   WRTCMP_ny: 495
   WRTCMP_dx: '{{ task_make_grid.ESGgrid_DELX }}'
   WRTCMP_dy: '{{ task_make_grid.ESGgrid_DELY }}'
+  walltime: 01:00:00
 task_run_post:
   post_output_domain_name: custom_ESGgrid_New_Zealand
-rocoto:
-  tasks:
-    metatask_run_ensemble:
-      task_run_fcst_mem#mem#:
-        walltime: 01:00:00
