--- a/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_SF_1p1km.yaml
+++ b/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_SF_1p1km.yaml
@@ -22,16 +22,23 @@ task_make_grid:
   ESGgrid_WIDE_HALO_WIDTH: 6
   ESGgrid_PAZI: 0.0
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: HRRR
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_FILES_ICS:
-    - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
+  envars:
+    EXTRN_MDL_NAME_ICS: HRRR
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_FILES_ICS:
+      - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: 3
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_FILES_LBCS:
-    - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
+  envars:
+    EXTRN_MDL_NAME_LBCS: RAP
+    LBC_SPEC_INTVL_HRS: 3
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_FILES_LBCS:
+      - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
+task_make_ics:
+  chgres_cube:
+    execution:
+      batchargs:
+        nodes: 16
 task_run_fcst:
   DT_ATMOS: 15
   LAYOUT_X: 24
@@ -51,13 +58,6 @@ task_run_fcst:
   WRTCMP_ny: 557
   WRTCMP_dx: '{{ task_make_grid.ESGgrid_DELX }}'
   WRTCMP_dy: '{{ task_make_grid.ESGgrid_DELY }}'
+  walltime: 02:30:00
 task_run_post:
   post_output_domain_name: custom_ESGgrid_SF_Bay_Area
-rocoto:
-  tasks:
-    metatask_run_ensemble:
-      task_run_fcst_mem#mem#:
-        walltime: 02:30:00
-      task_make_ics_mem#mem#:
-        nnodes: 16
-        ppn: 12
