--- a/tests/WE2E/test_configs/custom_grids/config.custom_GFDLgrid.yaml
+++ b/tests/WE2E/test_configs/custom_grids/config.custom_GFDLgrid.yaml
@@ -34,12 +34,14 @@ task_make_grid:
   GFDLgrid_JEND_OF_RGNL_DOM_ON_T6G: 78
   GFDLgrid_USE_NUM_CELLS_IN_FILENAMES: true
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: FV3GFS
-  USE_USER_STAGED_EXTRN_FILES: true
+  envars:
+    EXTRN_MDL_NAME_ICS: FV3GFS
+    USE_USER_STAGED_EXTRN_FILES: true
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: 3
-  USE_USER_STAGED_EXTRN_FILES: true
+  envars:
+    EXTRN_MDL_NAME_LBCS: FV3GFS
+    LBC_SPEC_INTVL_HRS: 3
+    USE_USER_STAGED_EXTRN_FILES: true
 task_run_fcst:
   DT_ATMOS: 100
   LAYOUT_X: 6
