--- a/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_SUBCONUS_Ind_3km_ics_HRRR_lbcs_RAP_suite_WoFS_v0.yaml
+++ b/tests/WE2E/test_configs/grids_extrn_mdls_suites_community/config.grid_SUBCONUS_Ind_3km_ics_HRRR_lbcs_RAP_suite_WoFS_v0.yaml
@@ -18,13 +18,15 @@ workflow:
     - parm/wflow/post.yaml
     - parm/wflow/test.yaml
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: HRRR
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_FILES_ICS:
-    - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
+  envars:
+    EXTRN_MDL_NAME_ICS: HRRR
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_FILES_ICS:
+      - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: RAP
-  LBC_SPEC_INTVL_HRS: 6
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_FILES_LBCS:
-    - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
+  envars:
+    EXTRN_MDL_NAME_LBCS: RAP
+    LBC_SPEC_INTVL_HRS: 6
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_FILES_LBCS:
+      - '{yy}{jjj}{hh}00{fcst_hr:02d}00'
