--- a/tests/WE2E/test_configs/verification/config.MET_ensemble_verification_winter_wx.yaml
+++ b/tests/WE2E/test_configs/verification/config.MET_ensemble_verification_winter_wx.yaml
@@ -27,14 +27,16 @@ rocoto:
       task_run_fcst_mem#mem#:
         walltime: 01:00:00
 task_get_extrn_ics:
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_NAME_ICS: FV3GFS
-  FV3GFS_FILE_FMT_ICS: netcdf
+  envars:
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_NAME_ICS: FV3GFS
+    FV3GFS_FILE_FMT_ICS: netcdf
 task_get_extrn_lbcs:
-  USE_USER_STAGED_EXTRN_FILES: true
-  EXTRN_MDL_NAME_LBCS: FV3GFS
-  FV3GFS_FILE_FMT_LBCS: netcdf
-  LBC_SPEC_INTVL_HRS: 3
+  envars:
+    USE_USER_STAGED_EXTRN_FILES: true
+    EXTRN_MDL_NAME_LBCS: FV3GFS
+    FV3GFS_FILE_FMT_LBCS: netcdf
+    LBC_SPEC_INTVL_HRS: 3
 global:
   DO_ENSEMBLE: true
   NUM_ENS_MEMBERS: 10
