--- a/ush/config.community.yaml
+++ b/ush/config.community.yaml
@@ -21,23 +21,15 @@ workflow:
   VERBOSE: true
   COMPILER: intel
 task_get_extrn_ics:
-  EXTRN_MDL_NAME_ICS: FV3GFS
-  FV3GFS_FILE_FMT_ICS: grib2
+  envars:
+    EXTRN_MDL_NAME_ICS: FV3GFS
+    FV3GFS_FILE_FMT_ICS: grib2
 task_get_extrn_lbcs:
-  EXTRN_MDL_NAME_LBCS: FV3GFS
-  LBC_SPEC_INTVL_HRS: 6
-  FV3GFS_FILE_FMT_LBCS: grib2
+  envars:
+    EXTRN_MDL_NAME_LBCS: FV3GFS
+    LBC_SPEC_INTVL_HRS: 6
+    FV3GFS_FILE_FMT_LBCS: grib2
 task_run_fcst:
-  QUILTING: true
-task_plot_allvars:
-  COMOUT_REF: ""
-global:
-  DO_ENSEMBLE: false
-  NUM_ENS_MEMBERS: 2
+  walltime: 02:00:00
 verification:
   VX_FCST_MODEL_NAME: FV3_GFS_v16_CONUS_25km
-rocoto:
-  tasks:
-    metatask_run_ensemble:
-      task_run_fcst_mem#mem#:
-        walltime: 02:00:00
